[metadata]
name = libmonty-tools
version = attr: libmonty_tools.version.__version__
url = https://codeberg.org/sunarch/libmonty-tools
project_urls =
    Bug Tracker = https://codeberg.org/sunarch/libmonty-tools/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio
    Topic :: Office/Business
    Topic :: Security
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = libmonty-tools - Collection of Python tools and small apps
long_description = file: README.md
long_description_content_type = text/markdown
keywords = libmonty, tools
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.10
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    libmonty-tools = libmonty_tools.__main__:main

[options.packages.find]
where = src
